--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# d3 code 
-/d3-examples
-
-# dependencies
-/node_modules
+# d3 code examples
+d3-examples
